first modulith setup
Signed-off-by: Maximilian Inckmann <maximilian.inckmann@kit.edu>